build/resources/test/LO-2/ValidPrograms/test_78.lo
// *Good testcase*
// String Operations
// main return value: 1
// Author: Tyler Collins


bool main() {
    String a, b, c, d;
  {
    a = "The rain in Spain falls";
    b = (~a);

    return (a < b);
  }
}

