build/resources/test/LO-2/InvalidPrograms/test_29.lo
// Incorrect formals

int main() {
    int a, b;
    {
        a = xyz(1, 2, 3);
        return a;
    }
}

int xyz(int a, b, int c) {
    String result;
    {
        result = b;
        return a;
    }
}